[project]
name = "pydrg"
version = "0.1.0"
description = "A Python interface for DRG (Diagnosis-Related Group) grouping using Java-based DRG logic via JPype"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "PyDrg Contributors" }
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "certifi>=2025.7.14",
    "charset-normalizer>=3.4.2",
    "idna>=3.10",
    "jpype1>=1.6.0",
    "packaging>=25.0",
    "requests>=2.32.4",
    "setuptools>=80.9.0",
    "soupsieve>=2.7",
    "tqdm>=4.67.1",
    "typing_extensions>=4.14.1",
    "urllib3>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/LibrePPS/PyDrg"
Repository = "https://github.com/LibrePPS/PyDrg.git"
Issues = "https://github.com/LibrePPS/PyDrg/issues"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true 